# dfyz

./: README.md
CG/: Form1.Designer.cs  MainForm.cs  Program.cs  input.txt
CG/.svn/: all-wcprops  dir-prop-base  entries
CG/.svn/text-base/: Clipper.cs.svn-base  Task3.csproj.svn-base  Task3.sln.svn-base
CG/Properties/: AssemblyInfo.cs  Settings.Designer.cs
CG/Properties/.svn/: all-wcprops  entries
CartesianTree/: CartesianTree.hs  Main.hs  README.txt
CartesianTree/data/: build-graphs  stats.txt
KnowledgeBase/: nnn.xml
KnowledgeBase/KnowledgeBase/: KnowledgeBase.csproj  KnowledgeBase.sln
KnowledgeBase/KnowledgeBase/Classes/: Attributes.cs  Data.cs  Element.cs  Exceptions.cs  Finder.cs  Link.cs  Loader.cs  Root.cs  Saver.cs
NumericalMethods/: task1.py  task2.py  task3.py
OrderedList/: Main.hs  OrderedList.hs  README.txt
XCalc/console/: Class1.cs  KomarovConsole.csproj  KomarovConsole.sln
XCalc/gui/: KomarovConsole.csproj  KomarovConsole.sln  xcalc.vsd
dftest/branches/1.0/: CMakeLists.txt  common.hpp  compiling.cpp  compiling.hpp  config.cpp  config.hpp  enviroment.hpp  fileutils.cpp  fileutils.hpp  logging.cpp  logging.hpp  main.cpp  procutils.cpp  procutils.hpp  testing.cpp  testing.hpp  validating.cpp  validating.hpp  xmlwriter.cpp  xmlwriter.hpp
dftest/branches/1.0/BuildFiles/: ALL_BUILD.vcproj  CMakeCCompiler.cmake  CMakeCache.txt  INSTALL.vcproj  cmake_install.cmake  dftest.sln  dftest.vcproj
dftest/branches/1.0/tinyxml/: tinyxml.h  tinyxmlerror.cpp
dftest/conf-samples/: dftest.xml  problem.xml
dftest/doc/: dftest.xml
(+8 files in other folders)
